deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtls-hello-server
  labels:
    app: server
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 443
      name: https
      targetPort: https
  selector:
    app: server
